syntax = "proto3";

option csharp_namespace = "Backet.Grpc";

import "Common/commonCommandResponse.proto";
package greet;

// The greeting service definition.
service Backet {
  // Sends a greeting
  rpc AddBacket (AddBacketRequest) returns (pole.Grpc.ExtraType.CommonCommandResponse);
  rpc ResponseTest (ResponseTestRequest) returns (pole.Grpc.ExtraType.CommonCommandResponse);
}

// The request message containing the user's name.
message AddBacketRequest {
  string name = 1;
}
message ResponseTestRequest {
  string name = 1;
}
